# matthews-info-dashboard

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/mid/: cli.py  main.py
src/mid/blocks/: __init__.py  base.py  registry.py
src/mid/blocks/examples/: kpi.py  quote.py  system.py
src/mid/blocks/general/: clock.py  network_status.py  weather_clock.py
src/mid/blocks/info/: tweve_padel_availability.py
src/mid/frontend/: app.js  index.html  styles.css
src/mid/layout/: __init__.py  engine.py  panels.py  schemas.py
