[project]
name = "matthews-info-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "arcay.sergio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.111.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)"
]

[tool.poetry]
packages = [{include = "mid", from = "src"}]
requires-poetry = ">=2.0.0,<3.0.0"

[project.scripts]
dev = "mid.cli:dev"
start = "mid.cli:start"
